# dial

./: DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
dial/: MEMORY.md  provider.py  storage.py
dial_memory/: MEMORY.md  provider.py  scorer.py  storage.py
tests/: test_provider.py  test_scorer.py  test_storage.py
