[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dial-memory"
version = "0.1.0"
description = "Default file-based memory provider for StrawPot"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/strawpot/dial"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["dial"]

[tool.pytest.ini_options]
testpaths = ["tests"]
